--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 <!--search icon link-->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
-    <title>16ixteeBeatz</title>
+    <title>16ixTeenBeatz</title>
   </head>
   <body>
     <div id="root"></div>
